# rdlocrand

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MODERNIZATION_LOG.md  README.md  SECURITY.md
.githooks/: pre-push
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: Python-package.yaml  R-CMD-check.yaml  Repository-metadata.yaml  Stata-package.yaml  ci.yml  publish-python.yml
Python/: rdlocrand_illustration.py
Python/rdlocrand/: README.md  ToBuild.txt  pyproject.toml  setup.cfg
Python/rdlocrand/src/rdlocrand/: __init__.py  rdlocrand_fun.py  rdrandinf.py  rdrbounds.py  rdsensitivity.py  rdwinselect.py
Python/rdlocrand/src/rdlocrand.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Python/rdlocrand/tests/: test_numerical_regression.py
R/: rdlocrand_illustration.R
R/rdlocrand/: DESCRIPTION  NAMESPACE
R/rdlocrand/.Rproj.user/77175A1D/: persistent-state
R/rdlocrand/.Rproj.user/77175A1D/pcs/: files-pane.pper  windowlayoutstate.pper
R/rdlocrand/.Rproj.user/77175A1D/sources/per/t/: 57386CF1  57386CF1-contents  7956A00F  7956A00F-contents  DE38D146  DE38D146-contents  EC26601A  EC26601A-contents
R/rdlocrand/.Rproj.user/77175A1D/sources/prop/: 51E6FBF5  62948759  8AF532F5  CD15AB11  INDEX
R/rdlocrand/.Rproj.user/shared/notebooks/: paths
R/rdlocrand/R/: rdlocrand_fun.R  rdlocrand_package.R  rdrandinf.R  rdrbounds.R  rdsensitivity.R  rdwinselect.R
R/rdlocrand/man/: rdlocrand-package.Rd  rdrandinf.Rd  rdrbounds.Rd  rdsensitivity.Rd  rdwinselect.Rd
R/rdlocrand/tests/: testthat.R
R/rdlocrand/tests/testthat/: test-numerical-regression.R
scripts/: check-all.py  check-local.R  check-python.py  check-r-replication-baseline.R  check-repo-metadata.py  check-stata-numerical.do  check-stata-numerical.py  check-stata-package.py  check-stata-runtime.do  check-stata-runtime.py  profile-python-hotpaths.py  profile-r-hotpaths.R  profile-stata-hotpaths.do  profile-stata-hotpaths.py  profile-stata-rdrandinf.do  profile-stata-rdrandinf.py
stata/: lrdlocrand.mlib  rdlocrand.pkg  rdlocrand_confint.mo  rdlocrand_confint_check.mo  rdlocrand_findstep.mo  rdlocrand_findwobs.mo  rdlocrand_findwobs_sym.mo  rdlocrand_functions.do  rdlocrand_illustration.do  rdlocrand_reclength.mo  rdlocrand_senate.dta  rdlocrand_wlength.mo  rdrandinf.ado  rdrandinf.sthlp  rdrandinf_model.ado  rdrbounds.ado  rdrbounds.sthlp  rdsensitivity.ado  rdsensitivity.sthlp  rdwinselect.ado  rdwinselect.sthlp  rdwinselect_allcovs.ado  stata.toc
