[metadata]
name = rdlocrand
version = 1.0.2
author = Ricardo Masini
author_email = rmasini@ucdavis.edu
description =  Local Randomization Methods for RD Designs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://rdpackages.github.io/rdlocrand/
project_urls = 
    Bug Tracker = https://github.com/rdpackages/rdlocrand/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    pandas>=2.0.0
    scipy
    statsmodels>=0.14.0
    linearmodels>=4.31

[options.packages.find]
where = src