[metadata]
name = rdlocrand
version = 2.0
author = Matias D. Cattaneo, Ricardo Masini, Rocio Titiunik, Gonzalo Vazquez-Bare
author_email = Matias D. Cattaneo <matias.d.cattaneo@gmail.com>, Ricardo Masini <ricardo.masini@gmail.com>, Rocio Titiunik <rocio.titiunik@gmail.com>, Gonzalo Vazquez-Bare <gvazquezbare@gmail.com>
maintainer = Matias D. Cattaneo
maintainer_email = matias.d.cattaneo@gmail.com
description = Local Randomization Methods for RD Designs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://rdpackages.github.io/
license = GPL-3.0-only
license_files = LICENSE.md
keywords = regression discontinuity, randomization inference, causal inference
project_urls = 
    Homepage = https://rdpackages.github.io/
    Source = https://github.com/rdpackages/rdlocrand
    Bug Tracker = https://github.com/rdpackages/rdlocrand/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires = 
    numpy>=2.1.0
    pandas>=2.2.0
    scipy>=1.12.0
    statsmodels>=0.14.1
    linearmodels>=5.4
    matplotlib>=3.8.0

[options.packages.find]
where = src
